Move coqdoc generation do dune.
This removes the coq_makefile build entirely.

--- a/coqdocjs/extra/header.html
+++ b/coqdocjs/extra/header.html
@@ -12,10 +12,10 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-<link href="../css/coqdocjs/coqdoc.css" rel="stylesheet" type="text/css" />
-<link href="../css/coqdocjs/coqdocjs.css" rel="stylesheet" type="text/css"/>
-<script type="text/javascript" src="../js/coqdocjs/config.js"></script>
-<script type="text/javascript" src="../js/coqdocjs/coqdocjs.js"></script>
+<link href="../../css/coqdocjs/coqdoc.css" rel="stylesheet" type="text/css" />
+<link href="../../css/coqdocjs/coqdocjs.css" rel="stylesheet" type="text/css"/>
+<script type="text/javascript" src="../../js/coqdocjs/config.js"></script>
+<script type="text/javascript" src="../../js/coqdocjs/coqdocjs.js"></script>
 </head>
 
 <body onload="document.getElementById('content').focus()">
@@ -28,9 +28,9 @@
 
     <!-- NOTE: These are displayed right to left on the page -->
     <span class="right">
-      <a href="./indexpage.html"> Index </a>
-      <a href="./toc.html"> `theories/` </a>
-      <a href="../../index.html"> Toplevel </a>
+      <a href="./indexpage.html"> Index for the theory </a>
+      <a href="./toc.html"> Table of contents for the theory </a>
+      <a href="../../../index.html"> Toplevel </a>
     </span>
 </div>
     <div id="content" tabindex="-1" onblur="document.getElementById('content').focus()">
